--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "confession-game",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "build/index.js",
   "private": true,
   "scripts": {
-    "serve": "node ./src"
+    "dev": "tsc && copyfiles --flat ./src/views/*.pug ./build/views && node ./build"
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -12,5 +12,12 @@
     "express": "^4.18.1",
     "pug": "^3.0.2",
     "socket.io": "^4.5.1"
+  },
+  "devDependencies": {
+    "@tsconfig/node16": "^1.0.3",
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.6.1",
+    "copyfiles": "^2.4.1",
+    "typescript": "^4.7.4"
   }
 }
