--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
-            
+            "preLaunchTask": "prelaunch build",
             "program": "${workspaceFolder}\\build\\index.js",
         },
         {
@@ -21,6 +21,8 @@
             "skipFiles": [
                 "<node_internals>/**"
             ],
+            // "preLaunchTask": "tsc: build",
+            "preLaunchTask": "prelaunch build",
             "program": "${workspaceFolder}\\build\\index.js",
             "serverReadyAction":{
                 "action": "openExternally",
