--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "main": "build/index.js",
   "private": true,
   "scripts": {
-    "dev": "tsc && copyfiles --flat ./src/views/*.pug ./build/views && node ./build"
+    "dev": "tsc && robocopy ./src/static ./build/static && node ./build"
   },
   "dependencies": {
     "axios": "^0.27.2",
-    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "pug": "^3.0.2",
